cduce/tests/full/bad/no_xml_plugin.t/no_xml_plugin.cd
let _ = load_xml "string:<a></a>";;